added process indicator

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -36,20 +36,21 @@ $icon-font-path: "../../bower_components/bootstrap-sass-official/assets/fonts/bo
 // injector
 // endinjector
 
-.error{
-  color:red;
+.error {
+  color: red;
 }
 
-.loading *{
+.loading * {
   display: none !important;
 }
-.loading::before{
+
+.loading::before {
   font-family: 'Glyphicons Halflings';
   content: "\e031";
   font-style: normal;
   font-weight: normal;
   margin-left: 50%;
-  font-size:20px;
+  font-size: 20px;
   line-height: 1;
   color: #ffa61b;
   -webkit-font-smoothing: antialiased;
@@ -57,11 +58,18 @@ $icon-font-path: "../../bower_components/bootstrap-sass-official/assets/fonts/bo
   -animation: spin .7s infinite linear;
   -webkit-animation: spin2 .7s infinite linear;
 }
-button span.glyphicon-refresh-animate{
-  display: none;
+
+.button, button {
+  span.glyphicon-refresh-animate {
+    display: none;
+  }
 }
-button.process span.glyphicon-refresh-animate{
-  display:inline;
+
+.button.process, button.process {
+  span.glyphicon-refresh-animate {
+    display: inline;
+    padding: 4px;
+  }
 }
 
 .glyphicon-refresh-animate {
@@ -70,18 +78,26 @@ button.process span.glyphicon-refresh-animate{
 }
 
 @-webkit-keyframes spin2 {
-  from { -webkit-transform: rotate(0deg);}
-  to { -webkit-transform: rotate(360deg);}
+  from {
+    -webkit-transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+  }
 }
 
 @keyframes spin {
-  from { transform: scale(1) rotate(0deg);}
-  to { transform: scale(1) rotate(360deg);}
+  from {
+    transform: scale(1) rotate(0deg);
+  }
+  to {
+    transform: scale(1) rotate(360deg);
+  }
 }
 
 /* layout.css Style */
 .upload-drop-zone {
-  margin:10px;
+  margin: 10px;
   height: 100px;
   border-width: 2px;
 }
@@ -94,12 +110,13 @@ button.process span.glyphicon-refresh-animate{
   line-height: 100px;
   text-align: center
 }
+
 .upload-drop-zone.drop {
   color: #222;
   border-color: #222;
 }
 
-.angular-google-map,.angular-google-map-container {
+.angular-google-map, .angular-google-map-container {
   height: 400px;
   width: 100%;
 }
