--- a/src/app/views/account/profile/edit/edit.html
+++ b/src/app/views/account/profile/edit/edit.html
@@ -2,7 +2,7 @@
 <div class="edit-profile">
     <form validate-form name="editProfileMdl.form" novalidate class="edit-profile-form">
         <h2>Personal Details</h2>
-        <div class="col-sm-9 no-padding no-float">
+        <div class="col-sm-9 no-padding no-float shortcode">
             <div class="row form-group">
                 <div class="col-sms-6 col-sm-6">
                     <label>Name</label>
@@ -44,9 +44,9 @@
 
 
 
-            <div class="from-group">
-                <button type="submit"  ng-click="updateProfile()" class="btn-medium col-sms-6 col-sm-4">UPDATE</button>
-                <button ui-sref="main.account.profile.view" class="btn-medium btn-default col-sms-6 col-sm-4">CANCEL</button>
+            <div class="from-group block">
+                <button type="submit"  ng-click="updateProfile()" class="button btn-medium orange">UPDATE</button>
+                <button ui-sref="main.account.profile.view" class="button btn-medium silver">CANCEL</button>
             </div>
 
         </div>
