--- a/src/app/views/account/equipments/add/add.html
+++ b/src/app/views/account/equipments/add/add.html
@@ -1,7 +1,7 @@
 <div class="add-equipment">
     <form validate-form name="addEquiMdl.form" novalidate ng-submit="updateProfile()" class="edit-profile-form">
         <h2>{{editMode ? 'Edit Equipment' :'Add New Equipment'}}</h2>
-        <div class="col-sm-9 no-padding no-float">
+        <div class="col-sm-9 no-padding no-float shortcode">
             <div class="row form-group">
 
                 <div class="col-sms-6 col-sm-6">
@@ -151,9 +151,9 @@
             </div>
             <hr>
 
-            <div class="from-group">
-                <button type="submit" class="btn-medium col-sms-6 col-sm-4" ng-click="add()">{{editMode ? 'SAVE' : 'ADD EQUIPMENT'}}</button>
-                <button class="btn-medium btn-default col-sms-6 col-sm-4" ui-sref="main.account.equipments.list">CANCEL</button>
+            <div class="from-group block">
+                <button type="submit" class="button btn-medium orange" ng-click="add()">{{editMode ? 'SAVE' : 'ADD EQUIPMENT'}}</button>
+                <button class="button btn-medium silver" ui-sref="main.account.equipments.list">CANCEL</button>
             </div>
 
         </div>
