--- a/src/app/views/cart/cart.html
+++ b/src/app/views/cart/cart.html
@@ -18,7 +18,7 @@
                 <input ng-model="item.is_postpaid" disabled type="checkbox">Postpaid
             </label>
         </div>
-
+            <!--<span class="icon-box style2"><i class="soap-icon-"></i>Remove</span>-->
         <br />
         <div class="table-cell">
             <dl class="term-description">
@@ -36,7 +36,7 @@
             <button class="button green btn-small uppercase" ng-click="remove(item)">Remove</button>
         </div>
     </div>
-    <div class="intro2 small-box border-box table-wrapper hidden-table-sms">
+    <div class="intro2 small-box border-box table-wrapper hidden-table-sms cart-total">
         <div class="description">
             <h4>Cart Total</h4>
         </div>
@@ -51,10 +51,12 @@
         </div>
         <div class="price-section table-cell" style="padding: 0; padding-left: 25px;">
             <div class="price"><div class="price-per-unit">${{mdl.data.total.total}}</div></div>
-            <a  class="button green btn-small uppercase">Checkout</a>
+
         </div>
     </div>
 
+    <a class="button green btn-large uppercase pull-right">Proceed to Checkout</a>
+    <a class="button dark-blue1 btn-large uppercase pull-left">Continue Renting Equipments</a>
     <div class="tour-google-map block"></div>
 
 </div>
