--- a/src/app/views/main/main.html
+++ b/src/app/views/main/main.html
@@ -105,6 +105,10 @@
     </div>
     <section id="content" class="gray-area">
         <div class="container">
+            <div ng-show="rmodel.message.show" class="alert alert-{{rmodel.message.type || 'help'}}" style="z-index: 4000">
+                {{rmodel.message.text}}
+                <span class="close" ng-click="rmodel.message.show=false"></span>
+            </div>
             <div id="main" ui-view></div>
         </div>
     </section>
