cart related fixes..

--- a/src/app/views/home/home.html
+++ b/src/app/views/home/home.html
@@ -25,7 +25,7 @@
                 </ul>
             </li>
             <li ng-if="isLoggedIn()">
-                <a class="pointerhover cart-count" ui-sref="main.cart"><i class="soap-icon-shopping" style="font-size: 6em;"></i><span>3</span></a>
+                <a class="pointerhover cart-count" ui-sref="main.cart"><i class="soap-icon-shopping" style="font-size: 6em;"></i><span>{{rmodel.cartCount}}</span></a>
             </li>
 
 
