--- a/src/app/views/cart/cart.html
+++ b/src/app/views/cart/cart.html
@@ -1,6 +1,6 @@
 <div id="tour-details" class="travelo-box" load-indicator>
     <div ng-repeat="item in mdl.data.rental_products" class="intro2 small-box border-box table-wrapper hidden-table-sms">
-        <div class="image-container table-cell"><img src="http://placehold.it/166x150" alt=""></div>
+        <div class="image-container table-cell"><img ng-src="{{(item.product.image) || 'http://placehold.it/166x150'}}" alt=""></div>
         <div class="description">
             <h4>{{item.product.name}}</h4>
         </div>
