--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -3775,7 +3775,7 @@ ul.search-tabs {
       dt, dd { padding-top: 0.5em; padding-bottom: 0.5em; line-height: 1.4em; }
     }
     .price-section {
-      text-align: center; width: 1%; border-left: 1px solid #f5f5f5; padding-left: 30px;
+      text-align: center; width: 1%; border-left: 1px solid #f5f5f5; padding: 0; padding-left: 26px;padding-right: 45px;padding-top: 13px;
       .price { float: none; line-height: 0.8em; text-align: center; margin-bottom: 20px; margin-right: 0; }
     }
   }
@@ -5021,7 +5021,13 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; }
   }
 }
 .cart-total {
-  border: 15px solid #3E3E3E;
+  background-color: #3E3E3E;
+}
+.cart-total h4 {
+  color: #FFF;
+  margin: 16px;
+  margin-bottom: 0px;
+  font-size: 1.8em;
 }
 .alert {
   margin: 10px 0px !important;
