--- a/src/app/views/cart/cart.html
+++ b/src/app/views/cart/cart.html
@@ -49,7 +49,7 @@
 
             </dl>
         </div>
-        <div class="price-section table-cell" style="padding: 0; padding-left: 25px;">
+        <div class="price-section table-cell">
             <div class="price"><div class="price-per-unit">${{mdl.data.total}}</div></div>
 
         </div>
