Logo title changed - minor fix

--- a/src/app/views/main/main.html
+++ b/src/app/views/main/main.html
@@ -181,7 +181,7 @@
         <div class="bottom gray-area">
             <div class="container">
                 <div class="logo pull-left">
-                    <a href="#" title="Travelo - home">
+                    <a href="#" title="Marketplace - Home">
                         <img src="assets/images/logo.png" />
                     </a>
                 </div>
