--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -436,9 +436,10 @@ dl.term-description {
   text-transform: uppercase; font-size: 0.9167em;
   dt, dd { line-height: 1.3333em; float: left; width: 50%; padding-top: 0.5em; padding-bottom: 0.5em; }
   dt { border-right: 1px solid #f5f5f5; color: $skin-active-color; font-weight: 400; padding-right: 5px; clear: both; }
-  dd { padding-left: 20px; }
+  dd { padding-left: 20px; color: #797979; }
   &:after { content: ""; display: table; clear: both; }
 }
+
 
 /* 2.2.5. Dropcap */
 .dropcap {
@@ -5022,12 +5023,15 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; }
 }
 .cart-total {
   background-color: #3E3E3E;
-}
-.cart-total h4 {
-  color: #FFF;
-  margin: 16px;
-  margin-bottom: 0px;
-  font-size: 1.8em;
+  h4 {
+    color: #FFF;
+    margin: 16px;
+    margin-bottom: 0px;
+    font-size: 1.8em;
+  }
+  dl.term-description {
+    dd { color: #FFF; }
+  }
 }
 .alert {
   margin: 10px 0px !important;
