--- a/src/app/views/account/account.html
+++ b/src/app/views/account/account.html
@@ -4,9 +4,9 @@
         <li active-state="main.account.profile"    ui-sref="main.account.profile.view"><a><i class="soap-icon-user circle"></i>Profile</a></li>
         <li active-state="main.account.equipments" ui-sref="main.account.equipments.list"><a><i class="soap-icon-businessbag circle"></i>Equipments</a></li>
         <li active-state="main.account.jobsites"   ui-sref="main.account.jobsites.list"  ><a><i class="soap-icon-wishlist circle"></i>Jobsites</a></li>
-        <li ui-sref-active="active" ui-sref="main.account.favourites"><a><i class="soap-icon-conference circle"></i>Favourited</a></li>
-        <li ui-sref-active="active" ui-sref="main.account.bookings"  ><a><i class="soap-icon-conference circle"></i>Sales</a></li> <!-- List of incoming orders, User can click on order to see equipments and its details, Can update status with comment for reasons of changing status, Status: Not Confirmed / Confirm / Approved or Cancelled / Ready to Pickup or Ready to Ship / Picked up or Dispatched / Delivered / End Contract-->
-        <li ui-sref-active="active" ui-sref="main.account.requests"  ><a><i class="soap-icon-conference circle"></i>Requests</a></li>
+        <!--<li ui-sref-active="active" ui-sref="main.account.favourites"><a><i class="soap-icon-conference circle"></i>Favourited</a></li>-->
+        <!--<li ui-sref-active="active" ui-sref="main.account.bookings"  ><a><i class="soap-icon-conference circle"></i>Sales</a></li>--> <!-- List of incoming orders, User can click on order to see equipments and its details, Can update status with comment for reasons of changing status, Status: Not Confirmed / Confirm / Approved or Cancelled / Ready to Pickup or Ready to Ship / Picked up or Dispatched / Delivered / End Contract&ndash;&gt;
+        <!--<li ui-sref-active="active" ui-sref="main.account.requests"  ><a><i class="soap-icon-conference circle"></i>Requests</a></li>-->
         <li ui-sref-active="active" ui-sref="main.account.invoices"  ><a><i class="soap-icon-settings circle"></i>Invoices</a></li>
         <li active-state="main.account.inventory" ui-sref="main.account.inventory.list"  ><a><i class="soap-icon-settings circle"></i>Inventory</a></li>
         <li active-state="main.account.orders" ui-sref="main.account.orders.list"  ><a><i class="soap-icon-settings circle"></i>My Orders</a></li>
