--- a/src/app/views/account/equipments/list/list.html
+++ b/src/app/views/account/equipments/list/list.html
@@ -32,7 +32,7 @@
             <dd>82%</dd>
         </dl>
 
-        <button class="btn-mini status" ng-click="delete(pro)">Delete</button>
+        <button class="btn-mini status" ng-click="delete(pro)">Archive</button>
         <button class="btn-mini status" ng-click="edit(pro)">Edit</button>
         <button class="btn-mini status" ui-sref="main.equiDetails({id:pro.id})">View</button>
     </div>
