--- a/src/app/views/account/jobsites/list/list.html
+++ b/src/app/views/account/jobsites/list/list.html
@@ -32,7 +32,7 @@
             <dd>3</dd>
         </dl>
 
-        <button class="btn-mini status" ng-click="delete(site)">Delete</button>
+        <button class="btn-mini status" ng-click="delete(site)">Archive</button>
         <button class="btn-mini status" ui-sref="main.account.jobsites.edit({id:site.id})">Edit</button>
     </div>
 
