--- a/src/app/views/cart/cart.html
+++ b/src/app/views/cart/cart.html
@@ -55,7 +55,7 @@
         </div>
     </div>
 
-    <a class="button green btn-large uppercase pull-right" ui-sref="main.orderConfirmation">Proceed</a>
+    <a class="button green btn-large uppercase pull-right" ui-sref="main.orderConfirmation">Proceed to Checkout</a>
     <a class="button dark-blue1 btn-large uppercase pull-left">Continue Renting Equipments</a>
     <div class="tour-google-map block"></div>
 
