--- a/src/app/views/equi-details/equi-details.html
+++ b/src/app/views/equi-details/equi-details.html
@@ -718,7 +718,7 @@
 
 </div>
 </div>
-<div class="sidebar col-md-3">
+<div class="sidebar col-sms-6 col-sm-4 col-md-3">
     <article class="detailed-logo">
         <figure>
             <img width="114" height="85" src="http://placehold.it/114x85" alt="">
