--- a/src/app/views/account/jobsites/add/add.html
+++ b/src/app/views/account/jobsites/add/add.html
@@ -4,6 +4,26 @@
         <div class="col-sm-9 no-padding no-float">
             <div class="row form-group">
                 <div class="col-sms-6 col-sm-6">
+                    <label>First Name</label>
+                    <input type="text" name="firstname" required class="input-text full-width" placeholder="Enter First Name">
+                </div>
+                <div class="col-sms-6 col-sm-6">
+                    <label>Last Name</label>
+                    <input type="text" name="lastname" required class="input-text full-width" placeholder="Enter Last Name">
+                </div>
+            </div>
+            <div class="row form-group">
+                <div class="col-sms-6 col-sm-6">
+                    <label>Company Name</label>
+                    <input type="text" name="companyname" required class="input-text full-width" placeholder="Enter Company Name">
+                </div>
+                <div class="col-sms-6 col-sm-6">
+                    <label>Phone Number</label>
+                    <input type="text" name="phonenumber" required class="input-text full-width" placeholder="Enter Phone Name">
+                </div>
+            </div>
+            <div class="row form-group">
+                <div class="col-sms-6 col-sm-6">
                     <label>Jobsite Name</label>
                     <input type="text" ng-model="mdl.data.name" name="jobsitename" required class="input-text full-width" placeholder="Enter Jobsite Name">
                 </div>
