--- a/src/app/views/checkout-address/checkout-address.html
+++ b/src/app/views/checkout-address/checkout-address.html
@@ -231,7 +231,7 @@
             </div>
             <div class="form-group row">
                 <div class="col-sm-6 col-md-5">
-                    <button type="submit" class="full-width btn-large">CONFIRM BOOKING</button>
+                    <button type="submit" class="full-width btn-large" ui-sref="main.cardDetails">CONFIRM BOOKING</button>
                 </div>
             </div>
         </form>
