--- a/src/app/views/main/main.html
+++ b/src/app/views/main/main.html
@@ -26,7 +26,7 @@
                         </ul>
                     </li>
                     <li ng-if="isLoggedIn()">
-                        <a class="pointerhover cart-count" ui-sref="main.cart"><i class="soap-icon-shopping" style="font-size: 6em;"></i><span>{{rmodel.cartCount}}</span></a>
+                        <a class="pointerhover cart-count" ui-sref="main.cart"><i class="soap-icon-shopping" style="font-size: 6em;"></i><span>{{rmodel.cartCount || 0}}</span></a>
                     </li>
 
 
