--- a/src/app/views/account/jobsites/add/add.html
+++ b/src/app/views/account/jobsites/add/add.html
@@ -5,21 +5,21 @@
             <div class="row form-group">
                 <div class="col-sms-6 col-sm-6">
                     <label>First Name</label>
-                    <input type="text" name="firstname" required class="input-text full-width" placeholder="Enter First Name">
+                    <input ng-model="mdl.data.first_name" type="text" name="firstname" required class="input-text full-width" placeholder="Enter First Name">
                 </div>
                 <div class="col-sms-6 col-sm-6">
                     <label>Last Name</label>
-                    <input type="text" name="lastname" required class="input-text full-width" placeholder="Enter Last Name">
+                    <input ng-model="mdl.data.last_name" type="text" name="lastname" required class="input-text full-width" placeholder="Enter Last Name">
                 </div>
             </div>
             <div class="row form-group">
                 <div class="col-sms-6 col-sm-6">
                     <label>Company Name</label>
-                    <input type="text" name="companyname" required class="input-text full-width" placeholder="Enter Company Name">
+                    <input ng-model="mdl.data.company_name" type="text" name="companyname" required class="input-text full-width" placeholder="Enter Company Name">
                 </div>
                 <div class="col-sms-6 col-sm-6">
                     <label>Phone Number</label>
-                    <input type="text" name="phonenumber" required class="input-text full-width" placeholder="Enter Phone Name">
+                    <input ng-model="mdl.data.phone" type="text" name="phonenumber" required class="input-text full-width" placeholder="Enter Phone Name">
                 </div>
             </div>
             <div class="row form-group">
@@ -79,7 +79,7 @@
 
 
             <div class="from-group">
-                <button type="submit" class="btn-medium col-sms-6 col-sm-4" ng-click="add()">{{editMode ? 'ADD JOBSITE' : 'SAVE'}}</button>
+                <button type="submit" class="btn-medium col-sms-6 col-sm-4" ng-click="add()">{{editMode ? 'SAVE' : 'ADD JOBSITE'}}</button>
                 <button class="btn-medium btn-default col-sms-6 col-sm-4" ui-sref="main.account.jobsites.list">CANCEL</button>
             </div>
 
