--- a/src/app/views/checkout-address/checkout-address.html
+++ b/src/app/views/checkout-address/checkout-address.html
@@ -165,13 +165,7 @@
                     </div>
                 </div>
                 <br /><br />
-                <div class="form-group">
-                    <div class="checkbox">
-                        <label>
-                            <input type="checkbox" name="shipping_same_as_billing" value="1"><span class="skin-color">&nbsp; Shipping Address</span> is same as <span class="skin-color">Billing Address</span>
-                        </label>
-                    </div>
-                </div>
+
             </div>
             <div class="card-information">
                 <h2>Your Card Information</h2>
@@ -239,16 +233,32 @@
 </div>
 <div class="sidebar col-sms-6 col-sm-4 col-md-3">
     <div class="booking-details travelo-box">
-        <h4>Booking Details</h4>
+        <h4>Cart Summary</h4>
         <article class="tour-detail">
             <figure class="clearfix">
                 <a title="" href="tour-detailed1.html" class="middle-block"><img class="middle-item" alt="" src="http://placehold.it/124x78"></a>
                 <div class="travel-title">
-                    <h5 class="box-title">Rome City Tour<small>3 Days Tour</small></h5>
+                    <h5 class="box-title">Product Details <small>Location name</small><small>$ 3546.41</small></h5>
                     <a href="tour-detailed1.html" class="button green">EDIT</a>
                 </div>
             </figure>
-            <div class="details">
+            <figure class="clearfix">
+                <a title="" href="tour-detailed1.html" class="middle-block"><img class="middle-item" alt="" src="http://placehold.it/124x78"></a>
+                <div class="travel-title">
+                    <h5 class="box-title">Product Details <small>Location name</small><small>$ 3546.41</small></h5>
+                    <a href="tour-detailed1.html" class="button green">EDIT</a>
+                </div>
+            </figure>
+            <figure class="clearfix">
+                <a title="" href="tour-detailed1.html" class="middle-block"><img class="middle-item" alt="" src="http://placehold.it/124x78"></a>
+                <div class="travel-title">
+                    <h5 class="box-title">Product Details <small>Location name</small><small>$ 3546.41</small></h5>
+                    <a href="tour-detailed1.html" class="button green">EDIT</a>
+                </div>
+            </figure>
+
+
+            <!--<div class="details">
                 <div class="icon-box style11 full-width">
                     <div class="icon-wrapper">
                         <i class="soap-icon-calendar"></i>
@@ -276,25 +286,22 @@
                         <dd>Rome</dd>
                     </dl>
                 </div>
-            </div>
+            </div>-->
         </article>
-
-        <h4>Other Details</h4>
         <dl class="other-details">
-            <dt class="feature">Tour:</dt><dd class="value">3 days</dd>
-            <dt class="feature">Extra benefits:</dt><dd class="value">No</dd>
-            <dt class="feature">taxes and fees:</dt><dd class="value">Free</dd>
+            <dt class="feature" style="border-top: none;">Shipping Cost</dt><dd class="value" style="border-top: none;">$ 100</dd>
+            <dt class="feature">Service Tax</dt><dd class="value">$50</dd>
             <dt class="total-price">Total Price</dt><dd class="total-price-value">$534.00</dd>
         </dl>
     </div>
 
     <div class="travelo-box contact-box">
-        <h4>Need Travelo Help?</h4>
+        <h4>Need Marketplace Help?</h4>
         <p>We would be more than happy to help you. Our team advisor are 24/7 at your service to help you.</p>
         <address class="contact-details">
             <span class="contact-phone"><i class="soap-icon-phone"></i> 1-800-123-HELLO</span>
             <br>
-            <a class="contact-email" href="#">help@travelo.com</a>
+            <a class="contact-email" href="#">help@marketplace.com</a>
         </address>
     </div>
 </div>
