--- a/src/app/views/card-details/card-details.html
+++ b/src/app/views/card-details/card-details.html
@@ -1,1 +1,143 @@
-<h1>Card Details</h1>
+<div class="col-md-9">
+<div class="booking-section travelo-box">
+
+<form class="booking-form" method="post" action="booking-handler.php">
+
+<div class="card-information">
+    <h2>Your Card Information</h2>
+    <div class="form-group row">
+        <div class="col-sm-6 col-md-5">
+            <label>Credit Card Type</label>
+            <div class="selector">
+                <select class="full-width">
+                    <option>select a card</option>
+                </select>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-5">
+            <label>Card holder name</label>
+            <input type="text" class="input-text full-width" value="" placeholder="" />
+        </div>
+    </div>
+    <div class="form-group row">
+        <div class="col-sm-6 col-md-5">
+            <label>Card number</label>
+            <input type="text" class="input-text full-width" value="" placeholder="" />
+        </div>
+        <div class="col-sm-6 col-md-5">
+            <label>Card identification number</label>
+            <input type="text" class="input-text full-width" value="" placeholder="" />
+        </div>
+    </div>
+    <div class="form-group row">
+        <div class="col-sm-6 col-md-5">
+            <label>Expiration Date</label>
+            <div class="constant-column-2">
+                <div class="selector">
+                    <select class="full-width">
+                        <option>month</option>
+                    </select>
+                </div>
+                <div class="selector">
+                    <select class="full-width">
+                        <option>year</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-3 col-md-2">
+            <label>billing zip code</label>
+            <input type="text" class="input-text full-width" value="" placeholder="" />
+        </div>
+    </div>
+</div>
+<hr />
+<div class="form-group">
+    <div class="checkbox">
+        <label>
+            <input type="checkbox"> By continuing, you agree to the <a href="#"><span class="skin-color">Terms and Conditions</span></a>.
+        </label>
+    </div>
+</div>
+<div class="form-group row">
+    <div class="col-sm-6 col-md-5">
+        <button type="submit" class="full-width btn-large" ui-sref="main.cardDetails">Confirm Order</button>
+    </div>
+</div>
+</form>
+</div>
+</div>
+<div class="sidebar col-sms-6 col-sm-4 col-md-3">
+    <div class="booking-details travelo-box">
+        <h4>Cart Summary</h4>
+        <article class="tour-detail">
+            <figure class="clearfix">
+                <a title="" href="tour-detailed1.html" class="middle-block"><img class="middle-item" alt="" src="http://placehold.it/124x78"></a>
+                <div class="travel-title">
+                    <h5 class="box-title">Product Details <small>Location name</small><small>$ 3546.41</small></h5>
+                    <a href="tour-detailed1.html" class="button green">EDIT</a>
+                </div>
+            </figure>
+            <figure class="clearfix">
+                <a title="" href="tour-detailed1.html" class="middle-block"><img class="middle-item" alt="" src="http://placehold.it/124x78"></a>
+                <div class="travel-title">
+                    <h5 class="box-title">Product Details <small>Location name</small><small>$ 3546.41</small></h5>
+                    <a href="tour-detailed1.html" class="button green">EDIT</a>
+                </div>
+            </figure>
+            <figure class="clearfix">
+                <a title="" href="tour-detailed1.html" class="middle-block"><img class="middle-item" alt="" src="http://placehold.it/124x78"></a>
+                <div class="travel-title">
+                    <h5 class="box-title">Product Details <small>Location name</small><small>$ 3546.41</small></h5>
+                    <a href="tour-detailed1.html" class="button green">EDIT</a>
+                </div>
+            </figure>
+
+
+            <!--<div class="details">
+                <div class="icon-box style11 full-width">
+                    <div class="icon-wrapper">
+                        <i class="soap-icon-calendar"></i>
+                    </div>
+                    <dl class="details">
+                        <dt class="skin-color">Date</dt>
+                        <dd>27 jan 2015 to 30 jan 2015</dd>
+                    </dl>
+                </div>
+                <div class="icon-box style11 full-width">
+                    <div class="icon-wrapper">
+                        <i class="soap-icon-clock"></i>
+                    </div>
+                    <dl class="details">
+                        <dt class="skin-color">Duration</dt>
+                        <dd>1 day 3 hours</dd>
+                    </dl>
+                </div>
+                <div class="icon-box style11 full-width">
+                    <div class="icon-wrapper">
+                        <i class="soap-icon-departure"></i>
+                    </div>
+                    <dl class="details">
+                        <dt class="skin-color">Location</dt>
+                        <dd>Rome</dd>
+                    </dl>
+                </div>
+            </div>-->
+        </article>
+        <dl class="other-details">
+            <dt class="feature" style="border-top: none;">Shipping Cost</dt><dd class="value" style="border-top: none;">$ 100</dd>
+            <dt class="feature">Service Tax</dt><dd class="value">$50</dd>
+            <dt class="total-price">Total Price</dt><dd class="total-price-value">$534.00</dd>
+        </dl>
+    </div>
+
+    <div class="travelo-box contact-box">
+        <h4>Need Marketplace Help?</h4>
+        <p>We would be more than happy to help you. Our team advisor are 24/7 at your service to help you.</p>
+        <address class="contact-details">
+            <span class="contact-phone"><i class="soap-icon-phone"></i> 1-800-123-HELLO</span>
+            <br>
+            <a class="contact-email" href="#">help@marketplace.com</a>
+        </address>
+    </div>
+</div>
