--- a/src/app/views/checkout-address/checkout-address.html
+++ b/src/app/views/checkout-address/checkout-address.html
@@ -167,54 +167,6 @@
                 <br /><br />
 
             </div>
-            <div class="card-information">
-                <h2>Your Card Information</h2>
-                <div class="form-group row">
-                    <div class="col-sm-6 col-md-5">
-                        <label>Credit Card Type</label>
-                        <div class="selector">
-                            <select class="full-width">
-                                <option>select a card</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-md-5">
-                        <label>Card holder name</label>
-                        <input type="text" class="input-text full-width" value="" placeholder="" />
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <div class="col-sm-6 col-md-5">
-                        <label>Card number</label>
-                        <input type="text" class="input-text full-width" value="" placeholder="" />
-                    </div>
-                    <div class="col-sm-6 col-md-5">
-                        <label>Card identification number</label>
-                        <input type="text" class="input-text full-width" value="" placeholder="" />
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <div class="col-sm-6 col-md-5">
-                        <label>Expiration Date</label>
-                        <div class="constant-column-2">
-                            <div class="selector">
-                                <select class="full-width">
-                                    <option>month</option>
-                                </select>
-                            </div>
-                            <div class="selector">
-                                <select class="full-width">
-                                    <option>year</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-3 col-md-2">
-                        <label>billing zip code</label>
-                        <input type="text" class="input-text full-width" value="" placeholder="" />
-                    </div>
-                </div>
-            </div>
             <hr />
             <div class="form-group">
                 <div class="checkbox">
@@ -225,7 +177,7 @@
             </div>
             <div class="form-group row">
                 <div class="col-sm-6 col-md-5">
-                    <button type="submit" class="full-width btn-large" ui-sref="main.cardDetails">CONFIRM BOOKING</button>
+                    <button type="submit" class="full-width btn-large" ui-sref="main.cardDetails">Continue with Payment</button>
                 </div>
             </div>
         </form>
