add location selection for jobsite for add and edit..

--- a/src/app/views/account/jobsites/add/add.html
+++ b/src/app/views/account/jobsites/add/add.html
@@ -75,6 +75,7 @@
                     <input ng-model="mdl.data.zip_code" name="zipcode" required type="text" class="input-text full-width">
                 </div>
             </div>
+            <map style="height: 450px;"></map>
 
 
 
